fixed overflow on stickies

--- a/src/main/resources/css/EpicPlugin.css
+++ b/src/main/resources/css/EpicPlugin.css
@@ -128,14 +128,20 @@ input {
 	margin: 10px
 }
 
+.story p {
+	font-family: "Reenie Beanie", arial, sans-serif;
+	font-size: 180%;
+}
+
 .story > a {
 	text-decoration: none;
 	color: #000;
 	background: #ffc;
-	display: block;
+	display: inline-flex;
 	height: 10em;
 	width: 10em;
 	padding: 1em;
+	overflow: hidden;
 
   	-moz-box-shadow: 5px 5px 7px rgba(33, 33, 33, 1);
 	-webkit-box-shadow: 5px 5px 7px rgba(33, 33, 33, .7);
@@ -186,11 +192,6 @@ story:nth-child(5n) a {
   	-o-transform: scale(1.25);
   	position:relative;
   	z-index:5;
-}
-
-.story p {
-	font-family: "Reenie Beanie", arial, sans-serif;
-	font-size: 180%;
 }
 
 .contributor {
